--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^11.0.2",
     "sass": "^1.64.2",
+    "toastify-js": "^1.12.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
